+ migrations support + linting + docs ! esm code output

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-library-template",
-  "version": "0.0.1",
+  "version": "3.0.0",
   "license": "MIT",
   "scripts": {
     "test": "NODE_ENV=test jest",
@@ -23,22 +23,28 @@
     }
   },
   "main": "./dist/index.js",
-  "types": "./esm/index.d.js",
+  "types": "./esm/index.d.ts",
   "module": "./esm/index.js",
   "type": "module",
+  "bin": {
+    "ts-library-template": "./dist/index.js",
+    "tslib": "./dist/index.js"
+  },
   "dependencies": {
-    "bottom-line-utils": "^0.10.1",
+    "bottom-line-utils": "^0.13.0",
     "empty-dir": "^2.0.0",
-    "fs-extra": "^9.0.1"
+    "fs-extra": "^9.0.1",
+    "semver": "^7.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
     "@dzek69/eslint-config-base": "^2.0.0",
-    "@dzek69/eslint-config-typescript": "^0.2.2",
+    "@dzek69/eslint-config-typescript": "^0.2.3",
     "@types/empty-dir": "^2.0.0",
     "@types/fs-extra": "^9.0.6",
+    "@types/semver": "^7.3.4",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "eslint": "^7.14.0",
