--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-library-template",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "license": "MIT",
   "scripts": {
     "test": "NODE_ENV=test jest",
@@ -47,6 +47,7 @@
     "@types/semver": "^7.3.4",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
+    "babel-plugin-module-extension": "^0.1.3",
     "eslint": "^7.14.0",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
