--- a/template/package.json
+++ b/template/package.json
@@ -37,6 +37,7 @@
     "@dzek69/eslint-config-typescript": "^0.2.4",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
+    "babel-plugin-module-extension": "^0.1.3",
     "eslint": "^7.14.0",
     "fs-extra": "^9.0.1",
     "husky": "^4.3.0",
