--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-library-template",
-  "version": "3.0.3",
+  "version": "3.1.0",
   "license": "MIT",
   "scripts": {
     "test": "NODE_ENV=test jest",
@@ -13,8 +13,7 @@
     "lint:fix": "yarn lint --fix",
     "prepack": "yarn compile",
     "prepublishOnly": "yarn lint && yarn test && yarn docs",
-    "start:dev": "nodemon",
-    "start:dev:compatibility": "TS_NODE_FILES=true yarn start:dev"
+    "start:dev": "nodemon"
   },
   "exports": {
     ".": {
