--- a/template/package.json
+++ b/template/package.json
@@ -15,8 +15,7 @@
     "lint:fix": "yarn lint --fix",
     "prepack": "yarn compile",
     "prepublishOnly": "yarn lint && yarn test && yarn docs",
-    "start:dev": "nodemon",
-    "start:dev:compatibility": "TS_NODE_FILES=true yarn start:dev"
+    "start:dev": "nodemon"
   },
   "exports": {
     ".": {
