--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ts-library-template",
-  "version": "3.1.0",
+  "version": "3.1.1",
+  "repository": "git@github.com:dzek69/ts-library-template.git",
   "license": "MIT",
   "scripts": {
     "test": "NODE_ENV=test jest",
@@ -13,7 +14,8 @@
     "lint:fix": "yarn lint --fix",
     "prepack": "yarn compile",
     "prepublishOnly": "yarn lint && yarn test && yarn docs",
-    "start:dev": "nodemon"
+    "start:dev": "nodemon",
+    "start:dev:compatibility": "TS_NODE_FILES=true yarn start:dev"
   },
   "exports": {
     ".": {
@@ -40,7 +42,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
     "@dzek69/eslint-config-base": "^2.0.0",
-    "@dzek69/eslint-config-typescript": "^0.2.4",
+    "@dzek69/eslint-config-typescript": "^0.3.2",
     "@types/empty-dir": "^2.0.0",
     "@types/fs-extra": "^9.0.6",
     "@types/semver": "^7.3.4",
@@ -55,5 +57,10 @@
     "ts-node": "^9.0.0",
     "typedoc": "^0.20.35",
     "typescript": "^4.2.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn prepublishOnly && yarn compile"
+    }
   }
 }
