--- a/template/package.json
+++ b/template/package.json
@@ -15,7 +15,8 @@
     "lint:fix": "yarn lint --fix",
     "prepack": "yarn compile",
     "prepublishOnly": "yarn lint && yarn test && yarn docs",
-    "start:dev": "nodemon"
+    "start:dev": "nodemon",
+    "start:dev:compatibility": "TS_NODE_FILES=true yarn start:dev"
   },
   "exports": {
     ".": {
@@ -33,7 +34,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
     "@dzek69/eslint-config-base": "^2.0.0",
-    "@dzek69/eslint-config-typescript": "^0.2.4",
+    "@dzek69/eslint-config-typescript": "^0.3.2",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "babel-plugin-module-extension": "^0.1.3",
