--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ts-library-template",
-  "version": "3.1.1",
+  "version": "3.2.0",
   "repository": "git@github.com:dzek69/ts-library-template.git",
   "license": "MIT",
   "scripts": {
     "test": "NODE_ENV=test jest",
-    "docs": "typedoc src/index.ts --out docs --listInvalidSymbolLinks --includes tutorials",
+    "docs": "typedoc src/index.ts --out docs --listInvalidSymbolLinks --includes tutorials --theme pages-plugin --includeVersion",
     "compile": "yarn compile:esm && yarn compile:cjs",
     "compile:esm": "rm -rf esm && tsc && node ./build-scripts/compile.esm.after.mjs",
     "compile:cjs": "rm -rf dist && tsc --project tsconfig.cjs.json && node ./build-scripts/compile.cjs.after.mjs",
@@ -32,7 +32,7 @@
     "tslib": "./dist/index.js"
   },
   "dependencies": {
-    "bottom-line-utils": "^0.13.0",
+    "bottom-line-utils": "^0.14.1",
     "empty-dir": "^2.0.0",
     "fs-extra": "^9.0.1",
     "semver": "^7.3.4"
@@ -42,20 +42,22 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
     "@dzek69/eslint-config-base": "^2.0.0",
-    "@dzek69/eslint-config-typescript": "^0.3.2",
+    "@dzek69/eslint-config-typescript": "^0.4.0",
     "@types/empty-dir": "^2.0.0",
     "@types/fs-extra": "^9.0.6",
+    "@types/jest": "^26.0.23",
     "@types/semver": "^7.3.4",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "babel-plugin-module-extension": "^0.1.3",
     "eslint": "^7.14.0",
     "husky": "^4.3.0",
-    "jest": "^26.6.3",
+    "jest": "^27.0.6",
     "must": "^0.13.4",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
-    "typedoc": "^0.20.35",
+    "typedoc": "^0.21.2",
+    "typedoc-plugin-pages-fork-fork": "^0.0.2",
     "typescript": "^4.2.4"
   },
   "husky": {
