--- a/template/package.json
+++ b/template/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx,.mjs",
     "lint:fix": "yarn lint --fix",
     "prepack": "yarn compile",
-    "prepublishOnly": "yarn lint && yarn test && yarn docs",
+    "prepublishOnly": "yarn audit && yarn lint && yarn test && yarn docs",
     "start:dev": "nodemon",
     "start:dev:compatibility": "TS_NODE_FILES=true yarn start:dev"
   },
