--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-library-template",
-  "version": "3.3.2",
+  "version": "3.4.0",
   "repository": "git@github.com:dzek69/ts-library-template.git",
   "license": "MIT",
   "scripts": {
@@ -44,6 +44,7 @@
     "@dzek69/eslint-config-base": "^2.1.0",
     "@dzek69/eslint-config-typescript": "^0.4.0",
     "@types/empty-dir": "^2.0.0",
+    "@types/eslint": "^7.28.0",
     "@types/fs-extra": "^9.0.6",
     "@types/jest": "^26.0.23",
     "@types/semver": "^7.3.4",
