! lib: incorrect babel config file name in `.npmignore` ! lib: added `next-env` to `tsconfig` & `.npmignore` = lib: added `next-env` to `.npmignore` = lib: added `pagesconfig.json` to `.npmignore` = lib: added `.next` folder to npm & git ignore = lib: added `demo` & `pages` folders to npm ignore for `esm` and `dist` folders

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-library-template",
-  "version": "3.4.1",
+  "version": "3.4.1+",
   "repository": "git@github.com:dzek69/ts-library-template.git",
   "license": "MIT",
   "scripts": {
