--- a/package.json
+++ b/package.json
@@ -41,21 +41,24 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
-    "@dzek69/eslint-config-base": "^2.1.0",
-    "@dzek69/eslint-config-typescript": "^0.4.0",
+    "@dzek69/eslint-config-base": "^2.2.0",
+    "@dzek69/eslint-config-import": "^1.0.0",
+    "@dzek69/eslint-config-import-typescript": "^1.0.0",
+    "@dzek69/eslint-config-typescript": "^1.0.1",
     "@types/empty-dir": "^2.0.0",
-    "@types/eslint": "^7.28.0",
+    "@types/eslint": "^8.4.5",
     "@types/fs-extra": "^9.0.6",
     "@types/jest": "^26.0.23",
     "@types/semver": "^7.3.4",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.1",
+    "@typescript-eslint/eslint-plugin": "^5.30.3",
+    "@typescript-eslint/parser": "^5.30.3",
     "babel-plugin-module-extension": "^0.1.3",
-    "eslint": "^7.32.0",
+    "eslint": "^8.18.0",
+    "eslint-plugin-import": "^2.26.0",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "must": "^0.13.4",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.19",
     "ts-node": "^9.0.0",
     "typedoc": "^0.21.10",
     "typedoc-plugin-pages-fork-fork": "^0.0.3",
