--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "test": "NODE_ENV=test jest",
-    "docs": "typedoc src/index.ts --out docs --listInvalidSymbolLinks --includes tutorials --theme pages-plugin --includeVersion",
+    "docs": "typedoc src/index.ts --out docs --includeVersion --pluginPages ./pagesconfig.json",
     "compile": "yarn compile:esm && yarn compile:cjs",
     "compile:esm": "rm -rf esm && tsc && node ./build-scripts/compile.esm.after.mjs",
     "compile:cjs": "rm -rf dist && tsc --project tsconfig.cjs.json && node ./build-scripts/compile.cjs.after.mjs",
@@ -45,6 +45,7 @@
     "@dzek69/eslint-config-import": "^1.0.0",
     "@dzek69/eslint-config-import-typescript": "^1.0.0",
     "@dzek69/eslint-config-typescript": "^1.0.1",
+    "@knodes/typedoc-plugin-pages": "^0.23.1",
     "@types/empty-dir": "^2.0.0",
     "@types/eslint": "^8.4.5",
     "@types/fs-extra": "^9.0.6",
@@ -60,8 +61,7 @@
     "must": "^0.13.4",
     "nodemon": "^2.0.19",
     "ts-node": "^9.0.0",
-    "typedoc": "^0.21.10",
-    "typedoc-plugin-pages-fork-fork": "^0.0.3",
+    "typedoc": "^0.23.8",
     "typescript": "^4.2.4"
   },
   "husky": {
