--- a/template/package.json
+++ b/template/package.json
@@ -37,6 +37,7 @@
     "@dzek69/eslint-config-import": "^1.0.0",
     "@dzek69/eslint-config-import-typescript": "^1.0.0",
     "@dzek69/eslint-config-typescript": "^1.0.1",
+    "@knodes/typedoc-plugin-pages": "^0.23.1",
     "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^5.30.3",
     "@typescript-eslint/parser": "^5.30.3",
@@ -49,8 +50,7 @@
     "must": "^0.13.4",
     "nodemon": "^2.0.19",
     "ts-node": "^9.0.0",
-    "typedoc": "^0.21.10",
-    "typedoc-plugin-pages-fork-fork": "^0.0.3",
+    "typedoc": "^0.23.8",
     "typescript": "^4.2.4"
   },
   "husky": {
