--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-library-template",
-  "version": "3.4.1+",
+  "version": "3.5.0",
   "repository": "git@github.com:dzek69/ts-library-template.git",
   "license": "MIT",
   "scripts": {
@@ -32,7 +32,7 @@
     "tslib": "./dist/index.js"
   },
   "dependencies": {
-    "bottom-line-utils": "^0.14.1",
+    "bottom-line-utils": "^0.23.1",
     "empty-dir": "^2.0.0",
     "fs-extra": "^9.0.1",
     "semver": "^7.3.4"
@@ -62,7 +62,7 @@
     "nodemon": "^2.0.19",
     "ts-node": "^9.0.0",
     "typedoc": "^0.23.8",
-    "typescript": "^4.2.4"
+    "typescript": "^4.7.4"
   },
   "husky": {
     "hooks": {
