--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,12 +30,18 @@
         "strictBindCallApply": true,
         "strictPropertyInitialization": true,
         "noImplicitThis": true,
+        "noImplicitOverride": true,
+        "useUnknownInCatchVariables": true,
+        "exactOptionalPropertyTypes": true,
+        "preserveValueImports": false,
+        "moduleSuffixes": [""],
         "alwaysStrict": true,
         "noUnusedLocals": false,
         "noUnusedParameters": false,
-        "noImplicitReturns": false,
+        "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": false,
         "moduleResolution": "node",
+        "moduleDetection": "auto",
         "baseUrl": null,
         "paths": null,
         "rootDirs": null,
