--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-library-template",
-  "version": "3.5.2",
+  "version": "3.5.3",
   "repository": "git@github.com:dzek69/ts-library-template.git",
   "license": "MIT",
   "scripts": {
@@ -14,6 +14,7 @@
     "lint:fix": "yarn lint --fix",
     "prepack": "yarn compile",
     "prepublishOnly": "yarn audit && yarn lint && yarn test && yarn docs",
+    "prepare": "husky install",
     "start:dev": "nodemon",
     "start:dev:compatibility": "TS_NODE_FILES=true yarn start:dev"
   },
@@ -56,11 +57,11 @@
     "babel-plugin-module-extension": "^0.1.3",
     "eslint": "^8.18.0",
     "eslint-plugin-import": "^2.26.0",
-    "husky": "^7.0.4",
+    "husky": "^8.0.1",
     "jest": "^27.5.1",
     "must": "^0.13.4",
     "nodemon": "^2.0.19",
-    "ts-node": "^9.0.0",
+    "ts-node": "^10.9.1",
     "typedoc": "^0.23.8",
     "typescript": "^4.7.4"
   },
