--- a/template/package.json
+++ b/template/package.json
@@ -15,6 +15,7 @@
     "lint:fix": "yarn lint --fix",
     "prepack": "yarn compile",
     "prepublishOnly": "yarn audit && yarn lint && yarn test && yarn docs",
+    "prepare": "husky install",
     "start:dev": "nodemon",
     "start:dev:compatibility": "TS_NODE_FILES=true yarn start:dev"
   },
@@ -45,11 +46,11 @@
     "eslint": "^8.18.0",
     "eslint-plugin-import": "^2.26.0",
     "fs-extra": "^9.0.1",
-    "husky": "^7.0.4",
+    "husky": "^8.0.1",
     "jest": "^27.5.1",
     "must": "^0.13.4",
     "nodemon": "^2.0.19",
-    "ts-node": "^9.0.0",
+    "ts-node": "^10.9.1",
     "typedoc": "^0.23.8",
     "typescript": "^4.2.4"
   },
