--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ts-library-template",
-  "version": "3.5.3",
+  "version": "3.6.0",
   "repository": "git@github.com:dzek69/ts-library-template.git",
   "license": "MIT",
   "scripts": {
     "test": "NODE_ENV=test jest",
-    "docs": "typedoc src/index.ts --out docs --includeVersion --pluginPages ./pagesconfig.json",
+    "docs": "typedoc src/index.ts --skipErrorChecking --out docs --includeVersion --pluginPages ./pagesconfig.json",
     "compile": "yarn compile:esm && yarn compile:cjs",
     "compile:esm": "rm -rf esm && tsc && node ./build-scripts/compile.esm.after.mjs",
     "compile:cjs": "rm -rf dist && tsc --project tsconfig.cjs.json && node ./build-scripts/compile.cjs.after.mjs",
@@ -16,7 +16,10 @@
     "prepublishOnly": "yarn audit && yarn lint && yarn test && yarn docs",
     "prepare": "husky install",
     "start:dev": "nodemon",
-    "start:dev:compatibility": "TS_NODE_FILES=true yarn start:dev"
+    "start:dev:compatibility": "TS_NODE_FILES=true yarn start:dev",
+    "updates": "npx --yes npm-check-updates --dep prod",
+    "updates:dev": "npx --yes npm-check-updates --dep dev",
+    "updates:all": "npx --yes npm-check-updates"
   },
   "exports": {
     ".": {
@@ -33,36 +36,36 @@
     "tslib": "./dist/index.js"
   },
   "dependencies": {
-    "bottom-line-utils": "^0.23.1",
-    "empty-dir": "^2.0.0",
-    "fs-extra": "^9.0.1",
-    "semver": "^7.3.4"
+    "bottom-line-utils": "^0.24.0",
+    "empty-dir": "^3.0.0",
+    "fs-extra": "^10.1.0",
+    "semver": "^7.3.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-typescript": "^7.12.7",
-    "@dzek69/eslint-config-base": "^2.2.0",
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.3",
+    "@babel/preset-typescript": "^7.18.6",
+    "@dzek69/eslint-config-base": "^2.3.0",
     "@dzek69/eslint-config-import": "^1.0.0",
     "@dzek69/eslint-config-import-typescript": "^1.0.0",
-    "@dzek69/eslint-config-typescript": "^1.0.1",
+    "@dzek69/eslint-config-typescript": "^1.0.2",
     "@knodes/typedoc-plugin-pages": "^0.23.1",
-    "@types/empty-dir": "^2.0.0",
-    "@types/eslint": "^8.4.5",
-    "@types/fs-extra": "^9.0.6",
-    "@types/jest": "^26.0.23",
-    "@types/semver": "^7.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.30.3",
-    "@typescript-eslint/parser": "^5.30.3",
+    "@types/empty-dir": "^2.0.1",
+    "@types/eslint": "^8.4.6",
+    "@types/fs-extra": "^9.0.13",
+    "@types/jest": "^29.0.3",
+    "@types/semver": "^7.3.12",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
     "babel-plugin-module-extension": "^0.1.3",
-    "eslint": "^8.18.0",
+    "eslint": "^8.24.0",
     "eslint-plugin-import": "^2.26.0",
     "husky": "^8.0.1",
-    "jest": "^27.5.1",
+    "jest": "^29.1.1",
     "must": "^0.13.4",
-    "nodemon": "^2.0.19",
+    "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "typedoc": "^0.23.8",
+    "typedoc": "^0.23.15",
     "typescript": "^4.7.4"
   },
   "husky": {
