--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-library-template",
-  "version": "3.6.0",
+  "version": "3.7.0",
   "repository": "git@github.com:dzek69/ts-library-template.git",
   "license": "MIT",
   "scripts": {
@@ -64,9 +64,10 @@
     "jest": "^29.1.1",
     "must": "^0.13.4",
     "nodemon": "^2.0.20",
+    "prettier": "^2.8.3",
     "ts-node": "^10.9.1",
     "typedoc": "^0.23.15",
-    "typescript": "^4.7.4"
+    "typescript": "^4.9.5"
   },
   "husky": {
     "hooks": {
