--- a/template/package.json
+++ b/template/package.json
@@ -25,8 +25,8 @@
   "exports": {
     ".": {
       "require": "./dist/index.js",
-      "default": "./esm/index.js",
-      "types": "./esm/index.d.ts"
+      "types": "./esm/index.d.ts",
+      "default": "./esm/index.js"
     }
   },
   "main": "./dist/index.js",
