--- a/template/package.json
+++ b/template/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "test": "NODE_ENV=test jest",
-    "docs": "typedoc src/index.ts --skipErrorChecking --out docs --includeVersion --pluginPages ./pagesconfig.json",
+    "docs": "typedoc src/index.ts --skipErrorChecking --out docs --includeVersion",
     "compile": "yarn compile:esm && yarn compile:cjs",
     "compile:esm": "rm -rf esm && tsc && node ./build-scripts/compile.esm.after.mjs",
     "compile:cjs": "rm -rf dist && tsc --project tsconfig.cjs.json && node ./build-scripts/compile.cjs.after.mjs",
@@ -35,29 +35,29 @@
   "type": "module",
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/preset-env": "^7.19.3",
-    "@babel/preset-typescript": "^7.18.6",
-    "@dzek69/eslint-config-base": "^2.3.0",
-    "@dzek69/eslint-config-import": "^1.0.0",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-typescript": "^7.21.4",
+    "@dzek69/eslint-config-base": "^2.4.0",
+    "@dzek69/eslint-config-import": "^1.2.0",
     "@dzek69/eslint-config-import-typescript": "^1.0.0",
-    "@dzek69/eslint-config-typescript": "^1.0.2",
-    "@knodes/typedoc-plugin-pages": "^0.23.1",
-    "@types/jest": "^29.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "@typescript-eslint/parser": "^5.38.1",
+    "@dzek69/eslint-config-typescript": "^1.1.0",
+    "@knodes/typedoc-plugin-pages": "^0.23.4",
+    "@types/jest": "^29.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
     "babel-plugin-module-extension": "^0.1.3",
-    "eslint": "^8.24.0",
-    "eslint-plugin-import": "^2.26.0",
-    "fs-extra": "^10.1.0",
-    "husky": "^8.0.1",
-    "jest": "^29.1.1",
+    "eslint": "^8.38.0",
+    "eslint-plugin-import": "^2.27.5",
+    "fs-extra": "^11.1.1",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
     "must": "^0.13.4",
-    "nodemon": "^2.0.20",
-    "prettier": "^2.8.3",
+    "nodemon": "^2.0.22",
+    "prettier": "^2.8.7",
     "ts-node": "^10.9.1",
-    "typedoc": "^0.23.15",
-    "typescript": "^4.9.5"
+    "typedoc": "^0.23.28",
+    "typescript": "^5.0.4"
   },
   "husky": {
     "hooks": {
