--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -2,10 +2,10 @@
     "extends": ["./tsconfig.json"],
     "compilerOptions": {
         "importHelpers": false,
-        "module": "commonjs",
+        "module": "es2015",
         "noEmit": false,
-        "outDir": "./dist",
-        "target": "es2017"
+        "outDir": "./esm",
+        "target": "es2019"
     },
     "include": [
         "src/"
