--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
         "inlineSourceMap": null,
         "inlineSources": null,
         "isolatedModules": true,
-        "jsx": "react",
+        "jsx": "react-jsx",
         "lib": [
             "es2019",
             "dom"
