--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-library-template",
-  "version": "3.11.0",
+  "version": "3.11.1",
   "repository": "git@github.com:dzek69/ts-library-template.git",
   "license": "MIT",
   "scripts": {
@@ -13,7 +13,7 @@
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx,.mjs",
     "lint:fix": "pnpm lint --fix",
     "prepack": "pnpm compile",
-    "prepublishOnly": "pnpm audit && pnpm lint && pnpm test && pnpm docs",
+    "prepublishOnly": "pnpm lint && pnpm test && pnpm docs",
     "prepare": "husky install",
     "start:dev": "nodemon",
     "start:dev:compatibility": "TS_NODE_FILES=true pnpm start:dev",
@@ -39,29 +39,30 @@
     "@ezez/utils": "^1.9.0",
     "empty-dir": "^3.0.0",
     "fs-extra": "^11.1.1",
-    "semver": "^7.5.1"
+    "json5": "^2.2.3",
+    "semver": "^7.5.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.1",
-    "@babel/preset-env": "^7.22.4",
-    "@babel/preset-typescript": "^7.21.5",
-    "@dzek69/eslint-config-base": "^2.4.0",
-    "@dzek69/eslint-config-import": "^1.2.0",
-    "@dzek69/eslint-config-import-typescript": "^1.0.0",
-    "@dzek69/eslint-config-typescript": "^1.1.0",
+    "@babel/core": "^7.22.8",
+    "@babel/preset-env": "^7.22.7",
+    "@babel/preset-typescript": "^7.22.5",
+    "@dzek69/eslint-config-base": "^2.5.0",
+    "@dzek69/eslint-config-import": "^1.3.0",
+    "@dzek69/eslint-config-import-typescript": "^1.0.1",
+    "@dzek69/eslint-config-typescript": "^1.1.1",
     "@knodes/typedoc-plugin-pages": "^0.23.4",
     "@types/empty-dir": "^2.0.1",
-    "@types/eslint": "^8.37.0",
+    "@types/eslint": "^8.44.0",
     "@types/fs-extra": "^11.0.1",
     "@types/jest": "^29.5.2",
     "@types/semver": "^7.5.0",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
     "babel-plugin-module-extension": "^0.1.3",
-    "eslint": "^8.38.0",
+    "eslint": "^8.44.0",
     "eslint-plugin-import": "^2.27.5",
     "husky": "^8.0.3",
-    "jest": "^29.5.0",
+    "jest": "^29.6.1",
     "must": "^0.13.4",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
