! lib: upgrade path of 3.11.0 - should pnpm import before install ! lib: scripts using yarn instead of pnpm = lib: deps update = self: deps update

--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "ts-library-template",
-  "version": "3.11.1",
+  "version": "3.11.2",
   "repository": "git@github.com:dzek69/ts-library-template.git",
   "license": "MIT",
   "scripts": {
     "test": "NODE_ENV=test jest",
     "docs": "typedoc src/index.ts --skipErrorChecking --out docs --includeVersion",
-    "compile": "pnpm compile:esm && pnpm compile:cjs",
+    "compile": "pnpm run compile:esm && pnpm run compile:cjs",
     "compile:esm": "rm -rf esm && tsc --project tsconfig.esm.json && node ./build-scripts/compile.esm.after.mjs",
     "compile:cjs": "rm -rf dist && tsc --project tsconfig.cjs.json && node ./build-scripts/compile.cjs.after.mjs",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx,.mjs",
-    "lint:fix": "pnpm lint --fix",
-    "prepack": "pnpm compile",
-    "prepublishOnly": "pnpm lint && pnpm test && pnpm docs",
+    "lint:fix": "pnpm run lint --fix",
+    "prepack": "pnpm run compile",
+    "prepublishOnly": "pnpm run lint && pnpm run test && pnpm run docs",
     "prepare": "husky install",
     "start:dev": "nodemon",
-    "start:dev:compatibility": "TS_NODE_FILES=true pnpm start:dev",
-    "updates": "npx --yes npm-check-updates --dep prod",
-    "updates:dev": "npx --yes npm-check-updates --dep dev",
-    "updates:all": "npx --yes npm-check-updates"
+    "start:dev:compatibility": "TS_NODE_FILES=true pnpm run start:dev",
+    "updates": "pnpm dlx npm-check-updates --dep prod",
+    "updates:dev": "pnpm dlx npm-check-updates --dep dev",
+    "updates:all": "pnpm dlx npm-check-updates"
   },
   "exports": {
     ".": {
@@ -43,36 +43,36 @@
     "semver": "^7.5.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.8",
-    "@babel/preset-env": "^7.22.7",
-    "@babel/preset-typescript": "^7.22.5",
+    "@babel/core": "^7.22.20",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-typescript": "^7.22.15",
     "@dzek69/eslint-config-base": "^2.5.0",
     "@dzek69/eslint-config-import": "^1.3.0",
     "@dzek69/eslint-config-import-typescript": "^1.0.1",
     "@dzek69/eslint-config-typescript": "^1.1.1",
     "@knodes/typedoc-plugin-pages": "^0.23.4",
     "@types/empty-dir": "^2.0.1",
-    "@types/eslint": "^8.44.0",
-    "@types/fs-extra": "^11.0.1",
-    "@types/jest": "^29.5.2",
-    "@types/semver": "^7.5.0",
+    "@types/eslint": "^8.44.2",
+    "@types/fs-extra": "^11.0.2",
+    "@types/jest": "^29.5.5",
+    "@types/semver": "^7.5.2",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "babel-plugin-module-extension": "^0.1.3",
     "eslint": "^8.44.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "^2.28.1",
     "husky": "^8.0.3",
-    "jest": "^29.6.1",
+    "jest": "^29.7.0",
     "must": "^0.13.4",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.1",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "typedoc": "^0.23.28",
-    "typescript": "^5.1.3"
+    "typescript": "^5.2.2"
   },
   "husky": {
     "hooks": {
-      "pre-push": "pnpm prepublishOnly && pnpm compile"
+      "pre-push": "pnpm run prepublishOnly && pnpm run compile"
     }
   }
 }
