--- a/template/package.json
+++ b/template/package.json
@@ -7,20 +7,20 @@
   "scripts": {
     "test": "NODE_ENV=test jest",
     "docs": "typedoc src/index.ts --skipErrorChecking --out docs --includeVersion",
-    "compile": "yarn compile:esm && yarn compile:cjs",
+    "compile": "pnpm run compile:esm && pnpm run compile:cjs",
     "compile:esm": "rm -rf esm && tsc --project tsconfig.esm.json && node ./build-scripts/compile.esm.after.mjs",
     "compile:cjs": "rm -rf dist && tsc --project tsconfig.cjs.json && node ./build-scripts/compile.cjs.after.mjs",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx,.mjs",
-    "lint:fix": "yarn lint --fix",
-    "prepack": "yarn compile",
-    "prepublishOnly": "yarn audit && yarn lint && yarn test && yarn docs",
+    "lint:fix": "pnpm run lint --fix",
+    "prepack": "pnpm run compile",
+    "prepublishOnly": "pnpm run audit && pnpm run lint && pnpm run test && pnpm run docs",
     "prepare": "husky install",
     "start:dev": "nodemon",
-    "start:dev:compatibility": "TS_NODE_FILES=true yarn start:dev",
-    "updates": "npx --yes npm-check-updates --dep prod",
-    "updates:dev": "npx --yes npm-check-updates --dep dev",
-    "updates:all": "npx --yes npm-check-updates"
+    "start:dev:compatibility": "TS_NODE_FILES=true pnpm run start:dev",
+    "updates": "pnpm dlx npm-check-updates --dep prod",
+    "updates:dev": "pnpm dlx npm-check-updates --dep dev",
+    "updates:all": "pnpm dlx npm-check-updates"
   },
   "exports": {
     ".": {
@@ -35,34 +35,34 @@
   "type": "module",
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.22.8",
-    "@babel/preset-env": "^7.22.7",
-    "@babel/preset-typescript": "^7.22.5",
+    "@babel/core": "^7.22.20",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-typescript": "^7.22.15",
     "@dzek69/eslint-config-base": "^2.5.0",
     "@dzek69/eslint-config-import": "^1.3.0",
     "@dzek69/eslint-config-import-typescript": "^1.0.1",
     "@dzek69/eslint-config-typescript": "^1.1.1",
     "@knodes/typedoc-plugin-pages": "^0.23.4",
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.5",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "babel-plugin-module-extension": "^0.1.3",
     "eslint": "^8.44.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "^2.28.1",
     "fs-extra": "^11.1.1",
     "husky": "^8.0.3",
-    "jest": "^29.6.1",
+    "jest": "^29.7.0",
     "must": "^0.13.4",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.1",
     "prettier": "^2.8.8",
-    "resolve-tspaths": "^0.8.14",
+    "resolve-tspaths": "^0.8.15",
     "ts-node": "^10.9.1",
     "typedoc": "^0.23.28",
-    "typescript": "^5.1.3"
+    "typescript": "^5.2.2"
   },
   "husky": {
     "hooks": {
-      "pre-push": "yarn prepublishOnly && yarn compile"
+      "pre-push": "pnpm run prepublishOnly && pnpm run compile"
     }
   }
 }
