--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-library-template",
-  "version": "3.11.2",
+  "version": "3.12.0",
   "repository": "git@github.com:dzek69/ts-library-template.git",
   "license": "MIT",
   "scripts": {
@@ -10,7 +10,7 @@
     "compile:esm": "rm -rf esm && tsc --project tsconfig.esm.json && node ./build-scripts/compile.esm.after.mjs",
     "compile:cjs": "rm -rf dist && tsc --project tsconfig.cjs.json && node ./build-scripts/compile.cjs.after.mjs",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint src --ext .ts,.tsx,.js,.jsx,.mjs",
+    "lint": "eslint src",
     "lint:fix": "pnpm run lint --fix",
     "prepack": "pnpm run compile",
     "prepublishOnly": "pnpm run lint && pnpm run test && pnpm run docs",
@@ -38,6 +38,7 @@
   "dependencies": {
     "@ezez/utils": "^1.9.0",
     "empty-dir": "^3.0.0",
+    "eslint": "^9.3.0",
     "fs-extra": "^11.1.1",
     "json5": "^2.2.3",
     "semver": "^7.5.4"
@@ -46,29 +47,21 @@
     "@babel/core": "^7.22.20",
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-typescript": "^7.22.15",
-    "@dzek69/eslint-config-base": "^2.5.0",
-    "@dzek69/eslint-config-import": "^1.3.0",
-    "@dzek69/eslint-config-import-typescript": "^1.0.1",
-    "@dzek69/eslint-config-typescript": "^1.1.1",
+    "@ezez/eslint": "^0.0.6",
     "@knodes/typedoc-plugin-pages": "^0.23.4",
     "@types/empty-dir": "^2.0.1",
-    "@types/eslint": "^8.44.2",
     "@types/fs-extra": "^11.0.2",
     "@types/jest": "^29.5.5",
     "@types/semver": "^7.5.2",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
     "babel-plugin-module-extension": "^0.1.3",
-    "eslint": "^8.44.0",
-    "eslint-plugin-import": "^2.28.1",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "must": "^0.13.4",
     "nodemon": "^3.0.1",
-    "prettier": "^2.8.8",
-    "ts-node": "^10.9.1",
+    "prettier": "^3.2.5",
+    "ts-node": "^10.9.2",
     "typedoc": "^0.23.28",
-    "typescript": "^5.2.2"
+    "typescript": "^5.4.5"
   },
   "husky": {
     "hooks": {
