--- a/template/package.json
+++ b/template/package.json
@@ -11,10 +11,10 @@
     "compile:esm": "rm -rf esm && tsc --project tsconfig.esm.json && node ./build-scripts/compile.esm.after.mjs",
     "compile:cjs": "rm -rf dist && tsc --project tsconfig.cjs.json && node ./build-scripts/compile.cjs.after.mjs",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint src --ext .ts,.tsx,.js,.jsx,.mjs",
+    "lint": "eslint src",
     "lint:fix": "pnpm run lint --fix",
     "prepack": "pnpm run compile",
-    "prepublishOnly": "pnpm run audit && pnpm run lint && pnpm run test && pnpm run docs",
+    "prepublishOnly": "pnpm audit && pnpm run lint && pnpm run test && pnpm run docs",
     "prepare": "husky install",
     "start:dev": "nodemon",
     "start:dev:compatibility": "TS_NODE_FILES=true pnpm run start:dev",
@@ -38,27 +38,20 @@
     "@babel/core": "^7.22.20",
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-typescript": "^7.22.15",
-    "@dzek69/eslint-config-base": "^2.5.0",
-    "@dzek69/eslint-config-import": "^1.3.0",
-    "@dzek69/eslint-config-import-typescript": "^1.0.1",
-    "@dzek69/eslint-config-typescript": "^1.1.1",
+    "@ezez/eslint": "^0.0.6",
     "@knodes/typedoc-plugin-pages": "^0.23.4",
     "@types/jest": "^29.5.5",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
     "babel-plugin-module-extension": "^0.1.3",
-    "eslint": "^8.44.0",
-    "eslint-plugin-import": "^2.28.1",
     "fs-extra": "^11.1.1",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "must": "^0.13.4",
     "nodemon": "^3.0.1",
-    "prettier": "^2.8.8",
+    "prettier": "^3.2.5",
     "resolve-tspaths": "^0.8.15",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "typedoc": "^0.23.28",
-    "typescript": "^5.2.2"
+    "typescript": "^5.4.5"
   },
   "husky": {
     "hooks": {
