--- a/template/package.json
+++ b/template/package.json
@@ -38,8 +38,7 @@
     "@babel/core": "^7.22.20",
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-typescript": "^7.22.15",
-    "@ezez/eslint": "^0.0.6",
-    "@knodes/typedoc-plugin-pages": "^0.23.4",
+    "@ezez/eslint": "^0.0.8",
     "@types/jest": "^29.5.5",
     "babel-plugin-module-extension": "^0.1.3",
     "fs-extra": "^11.1.1",
@@ -50,7 +49,7 @@
     "prettier": "^3.2.5",
     "resolve-tspaths": "^0.8.15",
     "ts-node": "^10.9.2",
-    "typedoc": "^0.23.28",
+    "typedoc": "0.26.0-beta.2",
     "typescript": "^5.4.5"
   },
   "husky": {
