--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-library-template",
-  "version": "3.13.0",
+  "version": "3.14.0",
   "repository": "git@github.com:dzek69/ts-library-template.git",
   "license": "MIT",
   "scripts": {
@@ -37,31 +37,31 @@
     "tslib": "./dist/index.js"
   },
   "dependencies": {
-    "@ezez/utils": "^1.9.0",
+    "@ezez/utils": "^4.1.0",
     "empty-dir": "^3.0.0",
-    "eslint": "^9.3.0",
-    "fs-extra": "^11.1.1",
+    "fs-extra": "^11.3.0",
     "json5": "^2.2.3",
-    "semver": "^7.5.4"
+    "semver": "^7.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
-    "@babel/preset-typescript": "^7.24.7",
-    "@ezez/eslint": "^0.0.8",
-    "@types/empty-dir": "^2.0.1",
-    "@types/fs-extra": "^11.0.2",
-    "@types/jest": "^29.5.5",
-    "@types/semver": "^7.5.2",
+    "@babel/core": "^7.25.9",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
+    "@ezez/eslint": "^0.3.0",
+    "@types/empty-dir": "^2.0.4",
+    "@types/fs-extra": "^11.0.4",
+    "@types/jest": "^29.5.14",
+    "@types/semver": "^7.5.8",
     "babel-plugin-module-extension": "^0.1.3",
+    "eslint": "^9.18.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "must": "^0.13.4",
-    "nodemon": "^3.0.1",
-    "prettier": "^3.2.5",
+    "nodemon": "^3.1.9",
+    "prettier": "^3.4.2",
     "ts-node": "^10.9.2",
-    "typedoc": "0.26.0-beta.2",
-    "typescript": "^5.4.5"
+    "typedoc": "0.27.6",
+    "typescript": "^5.7.3"
   },
   "husky": {
     "hooks": {
