--- a/template/package.json
+++ b/template/package.json
@@ -11,7 +11,7 @@
     "compile:esm": "rm -rf esm && tsc --project tsconfig.esm.json && node ./build-scripts/compile.esm.after.mjs",
     "compile:cjs": "rm -rf dist && tsc --project tsconfig.cjs.json && node ./build-scripts/compile.cjs.after.mjs",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint src",
+    "lint": "ezlint src",
     "lint:fix": "pnpm run lint --fix",
     "prepack": "pnpm run compile",
     "prepublishOnly": "pnpm audit && pnpm run lint && pnpm run test && pnpm run docs",
@@ -35,22 +35,22 @@
   "type": "module",
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.22.20",
-    "@babel/preset-env": "^7.22.20",
-    "@babel/preset-typescript": "^7.22.15",
-    "@ezez/eslint": "^0.0.8",
-    "@types/jest": "^29.5.5",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
+    "@ezez/eslint": "^0.3.0",
+    "@types/jest": "^29.5.14",
     "babel-plugin-module-extension": "^0.1.3",
-    "fs-extra": "^11.1.1",
+    "fs-extra": "^11.3.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "must": "^0.13.4",
-    "nodemon": "^3.0.1",
-    "prettier": "^3.2.5",
-    "resolve-tspaths": "^0.8.15",
+    "nodemon": "^3.1.9",
+    "prettier": "^3.4.2",
+    "resolve-tspaths": "^0.8.23",
     "ts-node": "^10.9.2",
-    "typedoc": "0.26.0-beta.2",
-    "typescript": "^5.4.5"
+    "typedoc": "0.27.6",
+    "typescript": "^5.7.3"
   },
   "husky": {
     "hooks": {
